force-app/main/default/objects/Case/fields/Assunto__c.field-meta.xml
<CustomField>
    <fullName>Assunto__c</fullName>
    <label>Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocklist</fullName>
            </value>
            <value>
                <fullName>Maus Tratos</fullName>
            </value>
            <value>
                <fullName>Abandono de Atendimento</fullName>
            </value>
            <value>
                <fullName>Cobrança Indevida</fullName>
            </value>
            <value>
                <fullName>Desconhece o Contrato</fullName>
            </value>
            <value>
                <fullName>Suspeita de Fraude</fullName>
            </value>
            <value>
                <fullName>Não recebeu o valor</fullName>
            </value>
            <value>
                <fullName>Não recebeu o boleto</fullName>
            </value>
            <value>
                <fullName>Divergência de Informação</fullName>
            </value>
            <value>
                <fullName>Amortização</fullName>
            </value>
            <value>
                <fullName>Alteração Cadastral</fullName>
            </value>
            <value>
                <fullName>Contratação de Produto</fullName>
            </value>
            <value>
                <fullName>2ª via do Boleto</fullName>
            </value>
            <value>
                <fullName>2ª via do Contrato</fullName>
            </value>
            <value>
                <fullName>Renegociação</fullName>
            </value>
            <value>
                <fullName>Cancelamento do Contrato</fullName>
            </value>
            <value>
                <fullName>Contato Interno</fullName>
            </value>
            <value>
                <fullName>Ligação</fullName>
            </value>
            <value>
                <fullName>Veracidade de Contato</fullName>
            </value>
            <value>
                <fullName>Loja</fullName>
            </value>
            <value>
                <fullName>Procedimento</fullName>
            </value>
            <value>
                <fullName>Produto</fullName>
            </value>
            <value>
                <fullName>Sem Interação</fullName>
            </value>
            <value>
                <fullName>Queda de Ligação</fullName>
            </value>
            <value>
                <fullName>Engano</fullName>
            </value>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>Teste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>