force-app/main/default/objects/Case/fields/Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Atendimento__c</fullName>
    <label>Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC</fullName>
            </value>
            <value>
                <fullName>Ouvidoria</fullName>
            </value>
            <value>
                <fullName>Mídias Sociais</fullName>
            </value>
            <value>
                <fullName>Gestão Centralizada de Reclamação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>