force-app/main/default/objects/Case/fields/DescricaoFechamento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoFechamento__c</fullName>
    <label>Descrição de fechamento</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>