force-app/main/default/objects/Case/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>17.COM</fullName>
            </value>
            <value>
                <fullName>17 Eventos</fullName>
            </value>
            <value>
                <fullName>17 Imóveis</fullName>
            </value>
            <value>
                <fullName>17 Tickets</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Promotora</fullName>
            </value>
            <value>
                <fullName>17 Food (alimentos, bebidas e ingressos)</fullName>
            </value>
            <value>
                <fullName>17 Soluções financeiras</fullName>
            </value>
            <value>
                <fullName>Banda Apollo</fullName>
            </value>
            <value>
                <fullName>Confia correspondente bancário</fullName>
            </value>
            <value>
                <fullName>Dona Mirinha Restaurante</fullName>
            </value>
            <value>
                <fullName>Euro 17 corretora de seguros</fullName>
            </value>
            <value>
                <fullName>Euro 17 Holding financeira</fullName>
            </value>
            <value>
                <fullName>Euro 17 Promotora</fullName>
            </value>
            <value>
                <fullName>Euro marketing esportivo</fullName>
            </value>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>JYU NANA SUSHI</fullName>
            </value>
            <value>
                <fullName>Securitizadora</fullName>
            </value>
            <value>
                <fullName>Securitizadora Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>