force-app/main/default/objects/Case/fields/Funcao__c.field-meta.xml
<CustomField>
    <fullName>Funcao__c</fullName>
    <label>Função</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente de negocio</fullName>
            </value>
            <value>
                <fullName>Gerente geral</fullName>
            </value>
            <value>
                <fullName>Superintendente</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>Analista</fullName>
            </value>
            <value>
                <fullName>Gestor(a)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>