force-app/main/default/objects/Case/fields/Representante__c.field-meta.xml
<CustomField>
    <fullName>Representante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>