force-app/main/default/objects/Case/fields/Sub_Assunto__c.field-meta.xml
<CustomField>
    <fullName>Sub_Assunto__c</fullName>
    <label>Sub Assunto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Assunto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não tem interesse pelo produto</fullName>
            </value>
            <value>
                <fullName>Não autorizou ou solicitou o contato</fullName>
            </value>
            <value>
                <fullName>Não conhece a pessoa procurada</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>Consignado</fullName>
            </value>
            <value>
                <fullName>FGTS</fullName>
            </value>
            <value>
                <fullName>Crefaz</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Consórcio</fullName>
            </value>
            <value>
                <fullName>EGI</fullName>
            </value>
            <value>
                <fullName>EGV</fullName>
            </value>
            <value>
                <fullName>FGI</fullName>
            </value>
            <value>
                <fullName>FGV</fullName>
            </value>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>EPJ</fullName>
            </value>
            <value>
                <fullName>Capital de Giro</fullName>
            </value>
            <value>
                <fullName>Antecipação de Recebíveis</fullName>
            </value>
            <value>
                <fullName>F.I</fullName>
            </value>
            <value>
                <fullName>F.V</fullName>
            </value>
            <value>
                <fullName>Parceria</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>É colaborador</fullName>
            </value>
            <value>
                <fullName>Não é colaborador</fullName>
            </value>
            <value>
                <fullName>Sem Interação</fullName>
            </value>
            <value>
                <fullName>Queda de Ligação</fullName>
            </value>
            <value>
                <fullName>Engano</fullName>
            </value>
            <value>
                <fullName>Valor divergente</fullName>
            </value>
            <value>
                <fullName>Valor das parcelas divergente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>