force-app/main/default/objects/Case/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inclusão</fullName>
            </value>
            <value>
                <fullName>Exclusão</fullName>
            </value>
            <value>
                <fullName>Relatório/Painel</fullName>
            </value>
            <value>
                <fullName>Acesso ao Salesforce</fullName>
            </value>
            <value>
                <fullName>Cadastro em geral</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Resete de senha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>