force-app/main/default/objects/Case/fields/Superior_Imediato__c.field-meta.xml
<CustomField>
    <fullName>Superior_Imediato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superior Imediato</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>