force-app/main/default/objects/Case/fields/UnidadeNegocio__c.field-meta.xml
<CustomField>
    <fullName>UnidadeNegocio__c</fullName>
    <label>Unidade de negócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>Operações estruturadas</fullName>
            </value>
            <value>
                <fullName>Produtos financeiros - Imóveis</fullName>
            </value>
            <value>
                <fullName>Produtos financeiros - Veículos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>