force-app/main/default/objects/Case/recordTypes/AlteracaoComissao.recordType-meta.xml
<RecordType>
    <fullName>AlteracaoComissao</fullName>
    <active>true</active>
    <businessProcess>Casos - Suporte</businessProcess>
    <description>Casos relacionados a alteração de percentual e hierarquia de comissão</description>
    <label>Alteração de Comissão</label>
</RecordType>