force-app/main/default/objects/Case/recordTypes/AtendimentoSACOuvidoria.recordType-meta.xml
<RecordType>
    <fullName>AtendimentoSACOuvidoria</fullName>
    <active>true</active>
    <businessProcess>Casos - Ouvidoria</businessProcess>
    <description>Casos relacionados aos atendimentos pela Ouvidoria ou SAC.</description>
    <label>Atendimento SAC e Ouvidoria</label>
</RecordType>