force-app/main/default/objects/Case/recordTypes/Suporte.recordType-meta.xml
<RecordType>
    <fullName>Suporte</fullName>
    <active>true</active>
    <businessProcess>Casos - Suporte</businessProcess>
    <description>Casos relacionados à problemas, dúvidas e solicitações referente ao Salesforce.</description>
    <label>Suporte</label>
</RecordType>