force-app/main/default/objects/Case/validationRules/DescricaoFechamento.validationRule-meta.xml
<ValidationRule>
    <fullName>DescricaoFechamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    ISPICKVAL( Status, &quot;Fechado&quot;),
     ISBLANK( DescricaoFechamento__c )
)</errorConditionFormula>
    <errorMessage>Para fechar um caso é obrigatório o preenchimento do campo “Descrição do fechamento”.</errorMessage>
</ValidationRule>