force-app/main/default/objects/Case/validationRules/PermissaoAlterarComissao.validationRule-meta.xml
<ValidationRule>
    <fullName>PermissaoAlterarComissao</fullName>
    <active>true</active>
    <description>Valida se o usuário possui a permissão para abrir o caso</description>
    <errorConditionFormula>AND(
NOT ($Permission.AltearComissao),
OR(ISPICKVAL( Type, &apos;Alteração de percentual&apos;),
ISPICKVAL( Type, &apos;Alteração de hierarquia&apos;)))</errorConditionFormula>
    <errorMessage>Você não tem permissão para abrir Caso referente comissão. Procure um superintendente ou a diretoria,</errorMessage>
</ValidationRule>