force-app/main/default/objects/Case/listViews/Cadastramento_Case.listView-meta.xml
<ListView>
    <fullName>Cadastramento_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cadastramento</label>
    <queue>Cadastramento</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>