force-app/main/default/objects/Case/listViews/Comissoes_Case.listView-meta.xml
<ListView>
    <fullName>Comissoes_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Comissões</label>
    <queue>Comissoes</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>