force-app/main/default/objects/Case/listViews/MeusCasosOuvidoria.listView-meta.xml
<ListView>
    <fullName>MeusCasosOuvidoria</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelado,Fechado</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.AtendimentoSACOuvidoria</value>
    </filters>
    <label>Meus Casos - Ouvidoria</label>
</ListView>