force-app/main/default/objects/Case/listViews/SuporteSalesforce_Case.listView-meta.xml
<ListView>
    <fullName>SuporteSalesforce_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Suporte Salesforce</label>
    <queue>SuporteSalesforce</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>